--- a/frontend/index.html
+++ b/frontend/index.html
@@ -82,7 +82,8 @@
 
 
   <!-- Koppel je JavaScript-bestand -->
-  <script src="/frontend/script.js"></script>
+  <script src="script.js"></script>
+
 
 </body>
 </html>
