--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,11 +9,56 @@
     button { padding: 10px 20px; font-size: 16px; margin: 5px; }
     input[type="checkbox"] { transform: scale(1.5); margin: 10px; }
     p { font-size: 18px; }
+    .mic-status {
+      display: inline-block;
+      padding: 10px 18px;
+      border-radius: 999px;
+      font-weight: 600;
+      margin: 15px auto 25px;
+      border: 1px solid transparent;
+      transition: background-color 0.2s ease, color 0.2s ease, border-color 0.2s ease;
+    }
+    .mic-status.idle {
+      background-color: #f0f0f0;
+      color: #555;
+      border-color: #d5d5d5;
+    }
+    .mic-status.calibrating {
+      background-color: #fff4cc;
+      color: #8a6d3b;
+      border-color: #f7e4a3;
+    }
+    .mic-status.listening {
+      background-color: #e3f2fd;
+      color: #1e5aa8;
+      border-color: #c4ddf6;
+    }
+    .mic-status.speaking {
+      background-color: #d4edda;
+      color: #155724;
+      border-color: #b7e1c1;
+    }
+    .mic-status.error {
+      background-color: #f8d7da;
+      color: #721c24;
+      border-color: #f1b0b7;
+    }
+    .mic-status small {
+      display: block;
+      font-size: 0.75rem;
+      font-weight: 400;
+      margin-top: 4px;
+    }
   </style>
 </head>
 <body>
   <h1>Live translation</h1>
   <p>Use your microphone to talk.</p>
+  <div id="micStatus" class="mic-status idle">
+      🎙️ Microphone idle
+      <small>Press start to begin calibration</small>
+    </div>
+
 
   <div>
     <label for="textOnly">
