--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,6 +17,8 @@
       margin: 15px auto 25px;
       border: 1px solid transparent;
       transition: background-color 0.2s ease, color 0.2s ease, border-color 0.2s ease;
+       cursor: pointer;
+      user-select: none;
     }
     .mic-status.idle {
       background-color: #f0f0f0;
@@ -54,7 +56,7 @@
 <body>
   <h1>Live translation</h1>
   <p>Use your microphone to talk.</p>
-  <div id="micStatus" class="mic-status idle">
+  <div id="micStatus" class="mic-status idle" role="button" tabindex="0" aria-live="polite">
       🎙️ Microphone idle
       <small>Press start to begin calibration</small>
     </div>
