--- a/frontend/index.html
+++ b/frontend/index.html
@@ -117,12 +117,12 @@
   <button id="pause" disabled>⏸️ pause ⏸️</button>
   <button id="stop" disabled>⏹️ stop ⏹️</button>
 
-  <!-- Stapelbare tekstcontainers -->
-    <h3>Original</h3>
+  
+    <h3>Recognized</h3>
     <div id="orig" style="max-height: 200px; overflow-y: auto; border: 1px solid #ccc; padding: 10px;"></div>
 
-  <h3>Recognized</h3>
-  <div id="transcript" style="max-height: 200px; overflow-y: auto; border: 1px solid #ccc; padding: 10px;"></div>
+    <h3>Corrected</h3>
+    <div id="transcript" style="max-height: 200px; overflow-y: auto; border: 1px solid #ccc; padding: 10px;"></div>
 
     <h3>Translation</h3>
     <div id="trans" style="max-height: 200px; overflow-y: auto; border: 1px solid #ccc; padding: 10px;"></div>
