Add microphone device selection dropdown

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -68,7 +68,12 @@
     </label>
   </div>
 
-
+  <div>
+    <label for="microphoneSelect">Microfoon:</label>
+    <select id="microphoneSelect">
+      <option value="">Standaard microfoon</option>
+    </select>
+  </div>
 
   <label for="sourceLanguage">INPUT language:</label>
   <select id="sourceLanguage">
