Filter ongewenste zinnen en verbeter transcriptie weergave: filter 'Ja ik weet het'/'Oui je sais' en Ã©Ã©n-woord zinnen; toon alle segmenten in Ã©Ã©n scrollend vak met auto-cleanup

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -123,14 +123,8 @@
   <button id="stop" disabled>⏹️ stop ⏹️</button>
 
   
-    <h3>Recognized</h3>
-    <div id="orig" style="max-height: 200px; overflow-y: auto; border: 1px solid #ccc; padding: 10px;"></div>
-
-    <h3>Corrected</h3>
-    <div id="transcript" style="max-height: 200px; overflow-y: auto; border: 1px solid #ccc; padding: 10px;"></div>
-
-    <h3>Translation</h3>
-    <div id="trans" style="max-height: 200px; overflow-y: auto; border: 1px solid #ccc; padding: 10px;"></div>
+    <h3>Live Transcriptie</h3>
+    <div id="transcriptContainer" style="max-height: 70vh; overflow-y: auto; border: 1px solid #ccc; padding: 15px; background-color: #f9f9f9;"></div>
 
 
   <!-- Koppel je JavaScript-bestand -->
