--- a/frontend/index.html
+++ b/frontend/index.html
@@ -97,24 +97,50 @@
     <option value="fr">French</option>
   <option value="nl">Dutch</option>
   <option value="en">English (Canada)</option>
-  <option value="es">Spanish</option>
-  <option value="pt">Portuguese</option>
-  <option value="fi">Finnish</option>
-  <option value="sw">Swahili</option>
-  <option value="sv">Swedish</option>
-  <option value="hi">Hindi</option>
-  <option value="no">Norwegian</option>
-  <option value="de">German</option>
-  <option value="ms">Malay</option>
-  <option value="am">Amharic</option>
-  <option value="id">Indonesian</option>
-  <option value="mg">Malagasy</option>
-  <option value="ar">Arabic</option>
-  <option value="ru">Russian</option>
-  <option value="zh">Chinese (Simplified)</option>
-  <option value="tr">Turkish</option>
-  <option value="pl">Polish</option>
-  <option value="ja">Japanese</option>
+    <option value="es">Spanish</option>
+    <option value="pt">Portuguese</option>
+    <option value="fi">Finnish</option>
+    <option value="sw">Swahili</option>
+    <option value="sv">Swedish</option>
+    <option value="hi">Hindi</option>
+    <option value="no">Norwegian</option>
+    <option value="de">German</option>
+    <option value="ms">Malay</option>
+    <option value="am">Amharic</option>
+    <option value="id">Indonesian</option>
+    <option value="mg">Malagasy</option>
+    <option value="ar">Arabic</option>
+    <option value="ru">Russian</option>
+    <option value="zh">Chinese (Simplified)</option>
+    <option value="tr">Turkish</option>
+    <option value="pl">Polish</option>
+    <option value="ja">Japanese</option>
+  </select>
+
+  <label for="interpreterLanguage">Taal van de tolk (optioneel):</label>
+  <select id="interpreterLanguage">
+    <option value="">Geen tolk (alleen spreker)</option>
+    <option value="fr">French</option>
+    <option value="nl">Dutch</option>
+    <option value="en">English</option>
+    <option value="es">Spanish</option>
+    <option value="pt">Portuguese</option>
+    <option value="fi">Finnish</option>
+    <option value="sw">Swahili</option>
+    <option value="sv">Swedish</option>
+    <option value="hi">Hindi</option>
+    <option value="no">Norwegian</option>
+    <option value="de">German</option>
+    <option value="ms">Malay</option>
+    <option value="am">Amharic</option>
+    <option value="id">Indonesian</option>
+    <option value="mg">Malagasy</option>
+    <option value="ar">Arabic</option>
+    <option value="ru">Russian</option>
+    <option value="zh">Chinese</option>
+    <option value="tr">Turkish</option>
+    <option value="pl">Polish</option>
+    <option value="ja">Japanese</option>
   </select>
 
   <br>
