Ajout d'une astuce Bluetooth pour les écouteurs

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -73,6 +73,12 @@
     <select id="microphoneSelect">
       <option value="">Standaard microfoon</option>
     </select>
+    <p style="font-size: 0.9rem; color: #555; margin-top: 6px; max-width: 520px;">
+      <strong>Astuce pour smartphone (FR)&nbsp;:</strong>
+      Si vous utilisez des écouteurs Bluetooth et que vous voulez garder le <em>micro du téléphone</em> mais écouter le son dans les écouteurs,
+      ouvrez les paramètres Bluetooth de vos écouteurs et, si l’option existe, désactivez
+      <q>appels téléphoniques</q> et laissez seulement <q>audio multimédia</q> activé.
+    </p>
   </div>
 
   <label for="sourceLanguage">INPUT language:</label>
